--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ SparkWordCountExample/.project
 SparkWordCountExample/.settings
 ubuntu-zesty-17.04-cloudimg-console.log
 
+.vagrant
+target
+SparkWordCountExample/bin
